Reading schedules from API working, DB seeders for testing
 - Added CORS middleware to API for easier development
 - Migrations: removed DisableForeignKeyConstraintWhenMigrating param
 - Removed unneeded DB models
 - Moved models: ./models/models.go > ./database/models.go
 - New seeders: ./database/seeders.go
 - API: New /schedules route
 - UI: Added schedules on landing page
