# docs/swagger.yaml
@@ -1,14 +1,6 @@
 basePath: /api/v1
 definitions:
-  gorm.DeletedAt:
-    properties:
-      time:
-        type: string
-      valid:
-        description: Valid is true if Time is not NULL
-        type: boolean
-    type: object
-  models.Schedule:
+  database.Schedule:
     properties:
       createdAt:
         type: string
@@ -21,7 +13,7 @@ definitions:
       schedule_status_id:
         type: integer
       scheduleStatus:
-        $ref: '#/definitions/models.ScheduleStatus'
+        $ref: '#/definitions/database.ScheduleStatus'
       start_date_time:
         type: string
       title:
@@ -29,7 +21,7 @@ definitions:
       updatedAt:
         type: string
     type: object
-  models.ScheduleStatus:
+  database.ScheduleStatus:
     properties:
       createdAt:
         type: string
@@ -42,7 +34,7 @@ definitions:
       updatedAt:
         type: string
     type: object
-  models.User:
+  database.User:
     properties:
       createdAt:
         type: string
@@ -59,6 +51,14 @@ definitions:
         type: string
       updatedAt:
         type: string
+    type: object
+  gorm.DeletedAt:
+    properties:
+      time:
+        type: string
+      valid:
+        description: Valid is true if Time is not NULL
+        type: boolean
     type: object
   types.LoginRequest:
     properties:
@@ -166,7 +166,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.Schedule'
+              $ref: '#/definitions/database.Schedule'
             type: array
         "400":
           description: Bad Request
@@ -218,7 +218,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.Schedule'
+              $ref: '#/definitions/database.Schedule'
             type: array
         "400":
           description: Bad Request
@@ -266,7 +266,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.User'
+              $ref: '#/definitions/database.User'
             type: array
         "400":
           description: Bad Request
@@ -314,7 +314,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/models.User'
+              $ref: '#/definitions/database.User'
             type: array
         "400":
           description: Bad Request
